# BartonCore

./: .clang-format  .gitignore  .gitmessage  .lintstagedrc.json  .prettierrc.yaml  0001-checkpoint-mquickjs-memory-monitoring.patch  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  build-matter.sh  build.sh  cog.toml  dockerw  event-handling-changes.patch  event-handling-clean.patch  matter-version  pyproject.toml
api/c/: CMakeLists.txt
api/c/public/: barton-core-client.h  barton-core-commissioning-info.h  barton-core-device-found-details.h  barton-core-device.h  barton-core-discovery-filter.h  barton-core-discovery-type.h  barton-core-endpoint.h  barton-core-initialize-params-container.h  barton-core-metadata.h  barton-core-properties.h  barton-core-resource.h  barton-core-status.h  barton-core-zigbee-energy-scan-result.h  device-service-client.h  device-service-commissioning-info.h  device-service-device-found-details.h  device-service-device.h  device-service-discovery-filter.h  device-service-discovery-type.h  device-service-endpoint.h  device-service-initialize-params-container.h  device-service-metadata.h  device-service-properties.h  device-service-resource.h  device-service-status.h  device-service-zigbee-energy-scan-result.h
api/c/src/: barton-core-client.c  barton-core-commissioning-info.c  barton-core-device-found-details.c  barton-core-device.c  barton-core-discovery-filter.c  barton-core-discovery-type.c  barton-core-endpoint.c  barton-core-initialize-params-container.c  barton-core-metadata.c  barton-core-resource.c  barton-core-status.c  barton-core-utils.c  barton-core-utils.h  barton-core-zigbee-energy-scan-result.c  device-service-client.c  device-service-commissioning-info.c  device-service-device-found-details.c  device-service-device.c  device-service-discovery-filter.c  device-service-discovery-type.c  device-service-endpoint.c  device-service-initialize-params-container.c  device-service-metadata.c  device-service-resource.c  device-service-status.c  device-service-utils.c  device-service-utils.h  device-service-zigbee-energy-scan-result.c
api/c/test/: CMakeLists.txt  barton-core-client-test.c  barton-core-device-found-details-test.c  barton-core-device-test.c  barton-core-discovery-filter-test.c  barton-core-endpoint-test.c  barton-core-metadata-test.c  barton-core-resource-test.c  barton-core-status-test.c  barton-core-utils-test.c  device-service-client-test.c  device-service-device-found-details-test.c  device-service-device-test.c  device-service-discovery-filter-test.c  device-service-endpoint-test.c  device-service-metadata-test.c  device-service-resource-test.c  device-service-status-test.c  device-service-utils-test.c
core/: CMakeLists.txt  gen_pygobject_stubs.in  run_g-ir.in
core/deviceDrivers/: philipsHueDeviceDriver.c
core/deviceDrivers/matter/: MatterCameraDeviceDriver.cpp  MatterCameraDeviceDriver.h  MatterCastingVideoClientDeviceDriver.cpp  MatterCastingVideoClientDeviceDriver.h  MatterChimeDeviceDriver.cpp  MatterChimeDeviceDriver.h  MatterContactSensorDeviceDriver.cpp  MatterContactSensorDeviceDriver.h  MatterDevice.cpp  MatterDevice.h  MatterDeviceDriver.cpp  MatterDeviceDriver.h  MatterDoorLockDeviceDriver.cpp  MatterDoorLockDeviceDriver.h  MatterDriverFactory.cpp  MatterDriverFactory.h  MatterLightDeviceDriver.cpp  MatterLightDeviceDriver.h  MatterWindowCoveringDeviceDriver.cpp  MatterWindowCoveringDeviceDriver.h
core/deviceDrivers/zigbee/: zigbeeDoorLockDeviceDriver.c  zigbeeDriverCommon.c  zigbeeLightControllerDeviceDriver.c  zigbeeLightDeviceDriver.c  zigbeeOccupancySensorDeviceDriver.c  zigbeePresenceDeviceDriver.c  zigbeeSensorDeviceDriver.c  zigbeeThermostatDeviceDriver.c  zigbeeWindowCoveringDeviceDriver.c
core/src/: deviceCommunicationWatchdog.c  deviceDescriptorHandler.c  deviceDescriptorHandler.h  deviceDiscoveryFilters.c  deviceDiscoveryFilters.h  deviceDriverManager.c  deviceDriverManager.h  deviceModelHelper.c  devicePrivateProperties.h  deviceService.c  deviceService.h  deviceServiceCommFail.c  deviceServiceCommFail.h  deviceServiceConfiguration.c  deviceServiceConfiguration.h  deviceServiceGatherer.c  deviceServiceHash.c  deviceServiceHash.h  deviceServiceProperties.h  deviceStorageMonitor.c  deviceStorageMonitor.h  subsystemManager.c  subsystemManager.h  subsystemManagerCallbacks.h
core/src/database/: jsonDatabase.c  jsonDatabase.h
core/src/device/: icDevice.c  icDeviceEndpoint.c  icDeviceMetadata.c  icDeviceResource.c  icInitialResourceValues.c
core/src/event/: deviceEventHandler.c  deviceEventHandler.h  deviceEventProducer.c  deviceEventProducer.h
core/src/observability/: deviceTelemetry.c  deviceTelemetry.h  observability.cpp  observability.h  observabilityLogBridge.cpp  observabilityLogBridge.h  observabilityMetrics.cpp  observabilityMetrics.h  observabilityTracing.cpp  observabilityTracing.h
core/src/serial/: icSerDesContext.c
core/src/softwareWatchdogDelegate/: softwareWatchdogDelegate.c
core/test/: AllowList.xml  CMakeLists.txt  Makefile
core/test/deviceDriverTester/: deviceDriverTester.c
core/test/deviceDrivers/: zigbeeDriverCommonTest.c
core/test/etc/: 000d6f000f08366d  zlog.conf
core/test/src/: MatterDeviceEndpointMapTest.cpp  MatterDeviceTest.cpp  MatterDeviceTestHelpers.h  QuickJsScriptTest.cpp  SbmdTlvTest.cpp  (+32 more)
libs/: CMakeLists.txt
libs/device/: CMakeLists.txt
libs/url/: README.md
reference/: CMakeLists.txt
reference/src/: barton-core-reference-app.c  barton-core-reference-io.c  barton-core-reference-io.h  cameraCategory.c  cameraCategory.h  cameraDeviceSession.c  cameraDeviceSession.h  cameraMediaServer.c  cameraMediaServer.h  cameraWebrtcClient.c  cameraWebrtcClient.h  category.c  category.h  command.c  command.h  coreCategory.c  coreCategory.h  device-service-reference-app.c  device-service-reference-io.c  device-service-reference-io.h  eventHandler.c  eventHandler.h  matterCategory.c  matterCategory.h  reference-network-credentials-provider.c  reference-network-credentials-provider.h  threadCategory.c  threadCategory.h  utils.c  utils.h
(+1266 files in other folders)
